WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288075
Speculative crash fix for ColorInputType::valueAsColor
https://bugs.webkit.org/show_bug.cgi?id=288075
Summary
Speculative crash fix for ColorInputType::valueAsColor
Anne van Kesteren
Reported
2025-02-20 02:29:44 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2025-02-20 02:29:45 PST
<
rdar://problem/144872437
>
Anne van Kesteren
Comment 2
2025-02-20 02:33:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40960
EWS
Comment 3
2025-02-21 00:04:40 PST
Committed
290773@main
(56c0d951240a): <
https://commits.webkit.org/290773@main
> Reviewed commits have been landed. Closing PR #40960 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug