Speculative crash fix for ColorInputType::valueAsColor https://bugs.webkit.org/show_bug.cgi?id=288075 rdar://144872437

Reviewed by Alex Christensen.

Based on a variety of crash logs there at least some crashes resulting
from bad optional access. Although I have found no way to reproduce
this, it seems better to fail silently in release builds.

* Source/WebCore/html/ColorInputType.cpp:
(WebCore::ColorInputType::valueAsColor const):

Canonical link: https://commits.webkit.org/290773@main